# Myo-Prosthetic-Hand-Control

./: README.md
MyoGui/: gui_data_collector.py  gui_discover.py  requirements.txt
MyoGui/qmyo/: __init__.py  defines.py  qmyo.py
MyoLinuxCpp/: CMakeLists.txt  README.md
MyoLinuxCpp/src/: bleapi.h  bleapi.xml  bled112client.h  buffer.h  firstargument.h  gattclient.cpp  gattclient.h  generator.py  main.cpp  myoapi.h  myoapi_p.h  myoclient.cpp  myoclient.h  myolinux.h  serial.cpp  serial.h
MyoLinuxPython/: example.py
MyoLinuxPython/core/: __init__.py  bluegiga.py  handlers.py  myodongle.py
MyoLinuxPython/utils/: __init__.py  event.py  packet_def.py
